# grandma-turner

./: .gitignore  CMakeLists.txt  gtlib.pc.in  readme.md
app/trieapp/: main.c
demos/trieapp/: data.txt  dict.c  readme.md
include/: gthashmap.h  gtlist.h  gtstack.h  gtstack.h.gch  gttrie.h  gttypes.h  gttypes.h.gch
src/: gthashmap.c  gtlist.c  gtstack.c  gttrie.c
test/: CMakeLists.txt  firsttest.c  test_gthashmap.c  test_gtlist.c  test_gtstack.c  test_gttrie.c
